# Scanner

./: .gitignore  Dockerfile  HANDLEIDING.md  LICENSE  docker-compose.yml  ros_entrypoint.sh
RPi/: GPIO.py
config/: config.py  fastdds.xml
domain/communication/: service_caller.py  service_client.py
domain/dto/: LaserScan.py  Point.py  data_point.py  laser_scan.py  lidar_response.py  point.py  scan_data.py
domain/helpers/: json_utils.py
scanner_pkg/: CMakeLists.txt  package.xml
src/data_processor/: Dockerfile  data_service.py  entrypoint.sh  pointcloud_to_obj.py
src/lidar/: Dockerfile  entrypoint.sh  lidar_scans.csv  lidar_service.py
src/lidar_data/: Dockerfile  entrypoint.sh  lidar_data_service.py
src/orchestrator/: Dockerfile  Dockerfile.dev  entrypoint.sh  orchestrator_service.py  run_service.py  scan_data.py
src/photogrammetry/: Dockerfile  entrypoint.sh  photogrammetry_service.py
src/servo/: Dockerfile  entrypoint.sh  servo_service.py
src/servo_motor/: Dockerfile  entrypoint.sh  servo_motor_service.py
src/step_motor/: Dockerfile  entrypoint.sh  step_motor_service.py
std_srvs/srv/: Trigger.py
