<?xml version="1.0"?>
<package format="3">
  <name>scanner_pkg</name>
  <version>0.0.0</version>
  <description>JSON passthrough service</description>

  <maintainer email="email@example.com">email</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>rclpy</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>